2003-03-04  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/formlib/validates.py: made the error messages of the validating
	fields (except the address field) customizable.

2003-03-04 Jacob Smullyan <smulloni@smullyan.org>

	* pylibs/formlib/validates.py (ISBNField): added a field
	for inputting ISBNs.

2003-03-03 Jacob Smullyan <smulloni@smullyan.org>

	* pylibs/formlib/views.py (ViewableForm.getView): now set 
	the name attribute of the form.

2003-02-27  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/vfs/vfs.py (LocalFS.__init__): make LocalFS follow
	symlinks by default.
	
2003-02-25 Jacob Smullyan <smulloni@smullyan.org>

	* docs/opman/opman.tex (section{Software}): added mention of the
	mxBase extension package to prerequisites.

2003-02-25  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/mod_skunkweb/mod_skunkweb.c: explicitly included
	sys/syslog.h, since with Apache 1.3.27 on Darwin that header
	isn't included by apache headers.

2003-02-18  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/vfs/importer.py (ExtInPkgImporter.getmod): some
	impossible code fixed; it got called on one machine and not
	another, for mysterious reasons.

2003-02-17  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/SocketMan/SocketMan.py (SocketMan.addConnection): code
	to delete unix socket files if they are hanging around where we
	expect to create them; other files don't get deleted.

	* SkunkWeb/Services/httpd/protocol.py
	(HTTPMethodRequestParser._getEnv):  permit httpd service to be run
	on a UNIX socket, as requested by Remi Delon. 

2003-02-11  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/argextract.py (extract_args): fix for default values.

2003-02-11 Jacob Smullyan <smulloni@smullyan.org>

	* pylibs/vfs/importer.py (VFSOwner.getmod): Package imports were
	broken, but now they seem to work.

2003-02-08  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/sessionHandler/FSSessionStore.py